<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_navigationHelp"
        android:title="@string/pref_navigationHelp">
        <SwitchPreference
            android:key="pref_key_sound"
            android:title="@string/pref_sound"
            android:defaultValue="true" />
        <SwitchPreference
            android:key="pref_key_hapticalFeedback"
            android:title="@string/pref_hapticalFeedback"
            android:defaultValue="true" />
    </PreferenceCategory>
    <!--<PreferenceCategory-->
        <!--android:key="pref_key_soundSetting"-->
        <!--android:title="@string/pref_soundSetting">-->
        <!--<CheckBoxPreference-->
            <!--android:key="pref_key_soundElevator"-->
            <!--android:title="@string/pref_soundElevator"-->
            <!--android:defaultValue="true"-->
            <!--android:dependency="pref_key_sound"/>-->
        <!--<CheckBoxPreference-->
            <!--android:key="pref_key_soundStairs"-->
            <!--android:title="@string/pref_soundStairs"-->
            <!--android:defaultValue="true"-->
            <!--android:dependency="pref_key_sound"/>-->
        <!--<CheckBoxPreference-->
            <!--android:key="pref_key_soundNavigation"-->
            <!--android:title="@string/pref_soundNavigatio"-->
            <!--android:defaultValue="true"-->
            <!--android:dependency="pref_key_sound"/>-->
    <!--</PreferenceCategory>-->
    <PreferenceCategory
        android:key="pref_key_habticalFeedbackSetting"
        android:title="@string/habticalFeedbackSetting">
        <ListPreference
            android:key="pref_key_hapticalFeedbackLeft"
            android:title="@string/hapticalFeedbackLeft"
            android:dialogTitle="@string/hapticalFeedbackLeft"
            android:entries="@array/pref_hapticalFeedback_entries"
            android:entryValues="@array/pref_hapticalFeedback_values"
            android:defaultValue="1"
            android:dependency="pref_key_hapticalFeedback"/>
        <ListPreference
            android:key="pref_key_hapticalFeedbackRight"
            android:title="@string/hapticalFeedbackRight"
            android:dialogTitle="@string/hapticalFeedbackRight"
            android:entries="@array/pref_hapticalFeedback_entries"
            android:entryValues="@array/pref_hapticalFeedback_values"
            android:defaultValue="2"
            android:dependency="pref_key_hapticalFeedback"/>
        <ListPreference
            android:key="pref_key_hapticalFeedbackStraightOn"
            android:title="@string/hapticalFeedbackStraightOn"
            android:dialogTitle="@string/hapticalFeedbackStraightOn"
            android:entries="@array/pref_hapticalFeedback_entries"
            android:entryValues="@array/pref_hapticalFeedback_values"
            android:defaultValue="3"
            android:dependency="pref_key_hapticalFeedback"/>
        <!--<ListPreference-->
            <!--android:key="pref_key_hapticalFeedbackElevator"-->
            <!--android:title="@string/hapticalFeedbackElevator"-->
            <!--android:dialogTitle="@string/hapticalFeedbackElevator"-->
            <!--android:entries="@array/pref_hapticalFeedback_entries"-->
            <!--android:entryValues="@array/pref_hapticalFeedback_values"-->
            <!--android:defaultValue="4"-->
            <!--android:dependency="pref_key_hapticalFeedback"/>-->
        <!--<ListPreference-->
            <!--android:key="pref_key_hapticalFeedbackStairs"-->
            <!--android:title="@string/hapticalFeedbackStairs"-->
            <!--android:dialogTitle="@string/hapticalFeedbackStairs"-->
            <!--android:entries="@array/pref_hapticalFeedback_entries"-->
            <!--android:entryValues="@array/pref_hapticalFeedback_values"-->
            <!--android:defaultValue="5"-->
            <!--android:dependency="pref_key_hapticalFeedback"/>-->
    </PreferenceCategory>
</PreferenceScreen>

